--- a/index.html
+++ b/index.html
@@ -416,12 +416,12 @@
 
       <div class="grid-3">
         <div class="card">
-          <div class="faculty-photo"><img src="prin sir.png" alt="Head of Higher"></div>
+          <div class="faculty-photo"><img src="prin-sir.png" alt="Head of Higher"></div>
           <h3>Higher.Sec Principal</h3>
           <p>Head of Higher Secondary.</p>
         </div>
         <div class="card">
-          <div class="faculty-photo"><img src="prin mam.png" alt="STEM Coordinator"></div>
+          <div class="faculty-photo"><img src="prin-mam.png" alt="STEM Coordinator"></div>
           <h3>Primary Principal</h3>
           <p>Head of Primary</p>
         </div>
@@ -467,7 +467,7 @@
         <div class="ph"><img src="event.png" alt="Labs"></div>
         <div class="ph"><img src="ACt.jpg" alt="Library"></div>
         <div class="ph"><img src="att.png" alt="Sports"></div>
-        <div class="ph"><img src="svs fam.png" alt="Arts"></div>
+        <div class="ph"><img src="svs-fam.png" alt="Arts"></div>
         <div class="ph"><img src="mat.jpg" alt="Events"></div>
         <div class="ph"><img src="yo.jpg" alt="Service"></div>
         <div class="ph"><img src="bus.png" alt="Campus"></div>
