--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
     </div>
     <div class="copyright">
       <div class="container" style="display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap">
-        <div>© <span id="year"></span> Sri Venkateswara School. All rights reserved.</div>
+        <div>© <span id="year"></span> Website By Dhinesh @ 2025. All rights reserved.</div>
         <div>Privacy • Terms • Non-discrimination policy</div>
       </div>
     </div>
@@ -648,4 +648,5 @@
     })();
   </script>
 </body>
+
 </html>
